# scandy-core-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.txt  README.md  RELEASE_NOTES.md
examples/: CMakeLists.txt
include/: android_fix_missing_std_to_string.h  mac_metal.h  scandy.h  scandy.h.in  scandy_license.h.in  scandy_version.h  scandy_version.h.in  scandycore_cl.h  vtkOBJWriter.h
include/scandy/core/: CompressionType.h  FloatDepthImage.h  FloatPointCloud.h  IPipeline.h  ISLAMConfiguration.h  IScandyCore.h  IScandyCoreConfiguration.h  MeshExportOptions.h  MeshType.h  ScanResolution.h  ScanState.h  ScannerType.h  getStatusString.h  royale_utils.h  status.h  utils.h
include/scandy/exception/: NotImplementedException.h
include/scandy/tests/: test_macros.h
include/scandy/utilities/: CameraIntrinsics.h  ColorCameraConfiguration.h  ColorFrame.h  Compression.h  CreateDracoMeshFromPolyData.h  CreateMeshFrameFromDracoMesh.h  CreateMeshFrameFromPolyData.h  DepthFrameMetaData.h  DepthFrameMetadata.h  DepthTrackMetaData.h  DepthTrackMetadata.h  EXIFOrientation.h  FusedTrackMetaData.h  FusedTrackMetadata.h  HeadTrackData.h  ID_types.h  IMUFrameMetaData.h  IMUFrameMetadata.h  IMUTrackMetaData.h  IMUTrackMetadata.h  Lap.h  MeshFrame.h  MetaData.h  Metadata.h  Networking.h  PointCloud.h  PointCloudMetaData.h  Pose.h  RGBAPoint.h  RelativePose.h  SensorFrameMetaData.h  SensorFrameMetadata.h  SurfacePoint.h  ToFPointCloud.h  TrackedMetaData.h  TrackedMetadata.h  VtkHelpers.h  XYZC.h  eigen_vector_math.h  hiberliteApplication.h  (+5 more)
tests/: CMakeLists.txt  test_macro_tests.cpp
(+18 files in other folders)
